# HM_MusicPlayer_BackEnd

./: CMakeLists.txt
src/: main.cpp
src/common/: constants.h  net.h
src/config/: config.json
src/database/: DBManager.cpp  DBManager.h  PlayHistoryDAO.cpp  PlayHistoryDAO.h  PlaylistDAO.cpp  PlaylistDAO.h  UserDAO.cpp  UserDAO.h
src/handlers/: PlayHistoryHandler.h  PlaylistHandler.h  UserHandler.cpp  UserHandler.h
src/models/: playhistory.h  playlist.h  song.h  user.h
src/server/: Router.cpp  Router.h  Server.cpp  Server.h  Session.cpp  Session.h  VerifyService.cpp  VerifyService.h  main.cpp
src/utils/: Config.cpp  Config.h  EmailUtil.cpp  EmailUtil.h  JWTUtil.cpp  JWTUtil.h  JsonUtil.cpp  JsonUtil.h  PasswordUtil.cpp  PasswordUtil.h
test/: curl.sh  test_mysql.cpp
